--- a/index.html
+++ b/index.html
@@ -1,45 +1,150 @@
 <!DOCTYPE html>
-<!--[if lt IE 8]><html class="no-js lt-ie9 oldie" lang="en"><![endif]-->
-<!--[if IE 8]><html class="no-js lt-ie9 ie8" lang="en"><![endif]-->
-<!--[if IE 9]><html class="no-js ie9" lang="en"><![endif]-->
-<!--[if gt IE 9]><!--><html class="no-js" lang="en"><!--<![endif]-->
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <title>NYS ITS RWD R&amp;D</title>
-  <link rel="stylesheet" href="css/excelsior.css" />
-  <link rel="stylesheet" href="css/styles.css" />
-  <script src="js/vendor/custom.modernizr.js"></script>
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/apple-touch-icon-144x144-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/apple-touch-icon-114x114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-72x72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon-57x57-precomposed.png">
-  <link rel="shortcut icon" href="images/apple-touch-icon.png">
-  <link rel="icon" href="images/favicon.ico">
-</head>
-<body class="white-bg">
-  <div id="page" class="page">
-    <div class="content-section">
-  <!--[if lte IE 7]>
-    <div class="row"><div class="small-12 columns unsupported-browser-message"><div class="alert-box">You are using a browser which is currently <strong>incompatible</strong> with our demo.<br> Please use <a href="http://www.google.com/chrome/">Google Chrome</a> to interact with this demo.</div></div></div>
-  <![endif]-->
+<html>
+    <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+    <title><!-- Site Title --></title>
 
-	<div class="row">
-		<div class="large-12 columns">
-			<h2>Welcome to Foundation</h2>
-			<p>This is a version for NYS ITS RWD R&amp;D.</p>
-			<hr />
-		</div>
-	</div>
+    <link rel="stylesheet" href="css/excelsior.css">
 
-	<div class="row">
-		<div class="large-8 columns">
-			<h3>Current Progress</h3>
-			<p><a href="prototypes/index.html" class="button large success">Current Prototype List</a></p>
-		</div>
-	</div>
-    </div>
-  </div>
+    <!-- Fav icon -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/apple-touch-icon-144x144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/apple-touch-icon-114x114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-72x72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon-57x57-precomposed.png">
+    <link rel="shortcut icon" href="images/apple-touch-icon.png">
+    <link rel="icon" href="images/favicon.ico">
 
-</body>
+    <script src="js/vendor/custom.modernizr.js"></script>
+    </head>
+    <body class="">
+      <a href="#global-nav" class="skip-to">Skip to Navigation</a>
+      <a href="#page" class="skip-to">Skip to Content</a>
+      <div class="gov-pull-down-container show-for-small">
+      <a href="#" id="gov-pull-down" class="gov-pull-down show-for-small" data-active="active-gov-bar">
+        Open New York State Search
+      </a>
+      </div>
+      <div id="gov-bar" class="gov-bar">
+        <div class="gov-wrap">
+          <div class="state-links">
+            <a href="#" class="gov-link-1">
+              New York State
+            </a>
+            <a href="#" class="gov-link-2">
+              State Agencies
+            </a>
+          </div>
+          <a href="#" id="gov-link-3" class="gov-link-3">
+            Search all of NY.gov
+          </a>
+          <form action="/">
+            <fieldset>
+              <legend>Legend</legend>
+              <label for="site-search-box">Search</label>
+              <div class="search-container">
+                <input type="search" />
+                <input type="submit" value="Search NY"  />
+              </div>
+            </fieldset>
+          </form>
+        </div>
+      </div>
+      <div id="site-bar" class="site-bar">
+        <div class="site-wrap">
+          <a href="index.html" class="site-logo">
+            <!-- Site Title -->
+          </a>
+          <div class="site-functions">
+            <ul class="mobile-functions">
+              <li><a href="#" id="mobile-site-search" class="mobile-icons mobile-search-button" data-active="active-site-search">Search Toggle</a></li>
+              <li><a href="#" id="mobile-site-menu" class="mobile-icons mobile-menu-button" data-active="active-site-menu">Menu Toggle</a></li>
+            </ul>
+            <!-- Link to show the menu -->
+            <div class="site-search">
+              <form action="/">
+                <fieldset>
+                  <legend>Legend</legend>
+                  <label for="site-search-box">Search</label>
+                  <div class="search-container">
+                    <input type="search" id="site-search-box" class="site-search-box" />
+                    <div class="site-button">
+                      <input type="submit" class="site-search-button" value="Search Agency"  />
+                    </div>
+                  </div>
+                </fieldset>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <nav id="global-nav" class="global-nav">
+        <div class="nav-container">
+          <ul>
+            <li><a href="#">Global Nav Link</a></li>
+          </ul>
+        </div>
+      </nav>
+      <div id="page" class="page">
+        <div class="content-section">
+
+             <!--
+             ======================== 
+             Place Page Content Here
+             ======================== 
+             -->
+
+        </div>
+        <footer role="contentinfo" class="footer">
+          <div class="footer-contents">
+
+             <!--
+             ======================== 
+             Place Footer Content Here
+             ======================== 
+             -->
+
+          </div>
+        </footer>
+      </div>
+
+      <script src="js/vendor/jquery.js"></script>
+      <script src="js/excelsior/excelsior.js"></script>
+      <script src="js/foundation/foundation.js"></script>
+
+      <!-- Uncomment items as needed -->
+      <!-- Foundation -->
+      <!-- <script src="javascripts/jquery.foundation.mediaQueryToggle.js"></script> -->
+      <!-- <script src="javascripts/jquery.foundation.forms.js"></script> -->
+      <!-- <script src="javascripts/jquery.foundation.reveal.js"></script> -->
+      <!-- <script src="javascripts/jquery.foundation.orbit.js"></script> -->
+      <!-- <script src="javascripts/jquery.foundation.navigation.js"></script> -->
+      <!-- <script src="javascripts/jquery.foundation.buttons.js"></script> -->
+      <!-- <script src="javascripts/jquery.foundation.tabs.js"></script> -->
+      <!-- <script src="javascripts/jquery.foundation.tooltips.js"></script> -->
+      <!-- <script src="javascripts/jquery.foundation.accordion.js"></script> -->
+      <!-- <script src="javascripts/jquery.placeholder.js"></script> -->
+      <!-- <script src="javascripts/jquery.foundation.alerts.js"></script> -->
+      <!-- <script src="javascripts/jquery.foundation.topbar.js"></script> -->
+      <!-- <script src="javascripts/jquery.foundation.joyride.js"></script> -->
+      <!-- <script src="javascripts/jquery.foundation.clearing.js"></script> -->
+      <!-- <script src="javascripts/jquery.foundation.magellan.js"></script> -->
+
+      <!-- Excelsior -->
+      <!-- <script src="js/excelsior/off-canvas.js"></script> -->
+
+      <!-- jQuery UI -->
+      <!-- <script src="js/vendor/jquery-ui.widget.min.js"></script> -->      
+
+      <!-- Charting -->
+      <!-- <script src="js/vendor/chart.min.js"></script> -->
+      <!-- <script src="js/excelsior/respCharts.js"></script> -->
+
+      <!-- Responsive Tables -->
+      <!-- <script src="js/excelsior/responsive-tables.js"></script> -->
+
+      <script>$(document).foundation();</script>
+
+
+    </body>
 </html>
