Added more comments to the html template

--- a/index.html
+++ b/index.html
@@ -19,6 +19,23 @@
     <link rel="icon" href="images/favicon.ico">
 
     <script src="js/vendor/custom.modernizr.js"></script>
+
+
+     <!--
+     ======================== 
+     Place Custom Styles Here
+     ======================== 
+     -->
+
+     <!--<link rel="stylesheet" href="css/site.css"> -->
+
+     <!--
+     ======================== 
+     End Custom Styles Here
+     ======================== 
+     -->
+
+
     </head>
     <body class="off-canvas">
       <a href="#global-nav" class="skip-to">Skip to Navigation</a>
@@ -65,8 +82,17 @@
       <div id="site-bar" class="site-bar">
         <div class="site-wrap">
           <a href="index.html" class="site-logo">
-            <!-- Please change out the site title-->
+             <!--
+             ======================== 
+             Place Site Title Here
+             ======================== 
+             -->
             Excelsior Web Framework
+             <!--
+             ======================== 
+             End Site Title Here
+             ======================== 
+             -->
           </a>
           <div class="site-functions">
             <ul class="mobile-functions">
@@ -93,12 +119,21 @@
       </div>
       <nav id="global-nav" class="global-nav">
         <div class="nav-container">
-            <!-- Change out the global navigation here -->
+            <!--
+             ======================== 
+             Place Global Navigation Here
+             ======================== 
+             -->
             <ul>
                 <li><a href="#">Nav Link 1</a></li>
                 <li><a href="#">Nav Link 2</a></li>
                 <li><a href="#">Nav Link 3</a></li>
             </ul>
+             <!--
+             ======================== 
+             End Global Navigation  Here
+             ======================== 
+             -->
         </div>
       </nav>
       <div id="page" class="page">
@@ -212,6 +247,20 @@
 
       <script>$(document).foundation();</script>
 
+
+     <!--
+     ======================== 
+     Place Custom Scripts Here
+     ======================== 
+     -->
+
+     <!--<script src="js/site.js"></script>-->
+
+     <!--
+     ======================== 
+     End Custom Scripts Here
+     ======================== 
+     -->
 
     </body>
 </html>
