Added noscript message to the template

--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
       <div id="page" class="page">
         <div class="content-section">
 
+            <noscript>
+              <div class="alert-box">
+                 <strong>JavaScript is currently disabled in your web browser. </strong><br /> For full functionality of this site, it is necessary to enable JavaScript. Here are <a href="http://www.enable-javascript.com/" target="_blank"> instructions how to enable JavaScript</a>
+              </div>
+            <noscript>
+
              <!--
              ======================== 
              Place Page Content Here
