Added off-canvass and site files

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
      ======================== 
      -->
 
-     <!--<link rel="stylesheet" href="css/site.css"> -->
+     <link rel="stylesheet" href="css/site.css">
 
-     <!--
+     <!--rbig1
+     
      ======================== 
      End Custom Styles Here
      ======================== 
@@ -254,7 +255,7 @@
      ======================== 
      -->
 
-     <!--<script src="js/site.js"></script>-->
+     <script src="js/site.js"></script>
 
      <!--
      ======================== 
