--- a/index.html
+++ b/index.html
@@ -126,8 +126,22 @@
              ======================== 
              -->
             <ul>
-                <li><a href="#">Nav Link 1</a></li>
-                <li><a href="#">Nav Link 2</a></li>
+                <li>
+                  <a href="#">Nav Link 1</a>
+                  <ul>
+                    <li><a href="#">Sub Nav Link 1.1</a></li>
+                    <li><a href="#">Sub Nav Link 1.2</a></li>
+                    <li><a href="#">Sub Nav Link 1.3</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="#">Nav Link 2</a>
+                  <ul>
+                    <li><a href="#">Sub Nav Link 2.1</a></li>
+                    <li><a href="#">Sub Nav Link 2.2</a></li>
+                    <li><a href="#">Sub Nav Link 2.3</a></li>
+                  </ul>
+                </li>
                 <li><a href="#">Nav Link 3</a></li>
             </ul>
              <!--
