--- a/index.html
+++ b/index.html
@@ -118,138 +118,115 @@
     </div>
   </div>
   <nav id="global-nav" class="global-nav">
-    <div class="nav-container">
-        <!--
-         ========================
-         Place Global Navigation Here
-         ========================
-         -->
-        <ul>
-            <li><a href="#">Nav Link 1</a></li>
-            <li><a href="#">Nav Link 2</a></li>
-            <li><a href="#">Nav Link 3</a></li>
-        </ul>
-         <!--
-         ========================
-         End Global Navigation  Here
-         ========================
-         -->
-    </div>
-  </nav>
-  <div id="page" class="page">
-    <div class="content-section">
-
-        <noscript>
-          <div class="alert-box">
-             <strong>JavaScript is currently disabled in your web browser. </strong><br /> For full functionality of this site, it is necessary to enable JavaScript. Here are <a href="http://www.enable-javascript.com/" target="_blank"> instructions how to enable JavaScript</a>
-          </div>
-        </div>
-      </div>
-      <nav id="global-nav" class="global-nav">
         <div class="nav-container">
             <!--
-             ======================== 
+             ========================
              Place Global Navigation Here
-             ======================== 
-             -->
+             ========================
+            -->
             <ul>
                 <li>
-                  <a href="#">Nav Link 1</a>
-                  <ul>
-                    <li><a href="#">Sub Nav Link 1.1</a></li>
-                    <li><a href="#">Sub Nav Link 1.2</a></li>
-                    <li><a href="#">Sub Nav Link 1.3</a></li>
-                  </ul>
+                    <a href="#">Nav Link 1</a>
+                    <ul>
+                      <li><a href="#">Sub Nav Link 1.1</a></li>
+                      <li><a href="#">Sub Nav Link 1.2</a></li>
+                      <li><a href="#">Sub Nav Link 1.3</a></li>
+                    </ul>
                 </li>
                 <li>
-                  <a href="#">Nav Link 2</a>
-                  <ul>
-                    <li><a href="#">Sub Nav Link 2.1</a></li>
-                    <li><a href="#">Sub Nav Link 2.2</a></li>
-                    <li><a href="#">Sub Nav Link 2.3</a></li>
-                  </ul>
+                    <a href="#">Nav Link 2</a>
+                    <ul>
+                      <li><a href="#">Sub Nav Link 2.1</a></li>
+                      <li><a href="#">Sub Nav Link 2.2</a></li>
+                      <li><a href="#">Sub Nav Link 2.3</a></li>
+                    </ul>
                 </li>
                 <li><a href="#">Nav Link 3</a></li>
             </ul>
-             <!--
-             ======================== 
+            <!--
+             ========================
              End Global Navigation  Here
-             ======================== 
-             -->
+             ========================
+            -->
         </div>
-      </nav>
-      <div id="page" class="page">
+    </nav>
+    <div id="page" class="page">
         <div class="content-section">
+            <noscript>
+                <div class="alert-box">
+                    <strong>JavaScript is currently disabled in your web browser. </strong><br /> For full functionality of this site, it is necessary to enable JavaScript. Here are <a href="http://www.enable-javascript.com/" target="_blank"> instructions how to enable JavaScript</a>
+                </div>
+            </noscript>
 
-         <!--
-         ========================
-         Place Page Content Here
-         ========================
-         -->
+            <!--
+            ========================
+            Place Page Content Here
+            ========================
+            -->
 
-        <div class="row">
-            <div class="large-12 columns">
-                <h1>Page Title</h1>
+            <div class="row">
+                <div class="large-12 columns">
+                    <h1>Page Title</h1>
+                </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="large-12 columns">
-                <h2>Getting Started with the Excelsior Web Framework (EWF)</h2>
-                <p>The Excelsior meta-framework is built using some of best web technologies currently avaliable. Using these different vendor libraries as a base, allows developers to create cutting edge websites and applications at a much faster pase.</p>
+            <div class="row">
+                <div class="large-12 columns">
+                    <h2>Getting Started with the Excelsior Web Framework (EWF)</h2>
+                    <p>The Excelsior meta-framework is built using some of best web technologies currently avaliable. Using these different vendor libraries as a base, allows developers to create cutting edge websites and applications at a much faster pase.</p>
 
-                <p>
-                    To get started using EWF please see out <a href="https://github.com/nys-its/excelsior-web-framework/wiki">documentation</a>.
-                </p>
+                    <p>
+                        To get started using EWF please see out <a href="https://github.com/nys-its/excelsior-web-framework/wiki">documentation</a>.
+                    </p>
+                </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="large-12 columns">
-                <h3>Built with:</h3>
-                <ul class="bulleted-list">
-                    <li><a href="http://foundation.zurb.com">Zurb's Foundation</a></li>
-                    <li><a href="http://jquery.com">jQuery</a></li>
-                    <li><a href="http://http://modernizr.com/">Modernizr</a></li>
-                </ul>
+            <div class="row">
+                <div class="large-12 columns">
+                    <h3>Built with:</h3>
+                    <ul class="bulleted-list">
+                        <li><a href="http://foundation.zurb.com">Zurb's Foundation</a></li>
+                        <li><a href="http://jquery.com">jQuery</a></li>
+                        <li><a href="http://http://modernizr.com/">Modernizr</a></li>
+                    </ul>
+                </div>
             </div>
+
+             <!--
+             ========================
+             End Page Content Here
+             ========================
+             -->
+
         </div>
+        <footer role="contentinfo" class="footer">
+          <div class="footer-contents">
 
-         <!--
-         ========================
-         End Page Content Here
-         ========================
-         -->
+             <!--
+             ========================
+             Place Footer Content Here
+             ========================
+             -->
 
+            <div class="row">
+                <div class="large-12 columns">
+                    <ul>
+                        <li>
+                            <a href="http://nys-its.github.com/go-responsive/">See the framework in action</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+             <!--
+             ========================
+             End Footer Content Here
+             ========================
+             -->
+
+          </div>
+        </footer>
     </div>
-    <footer role="contentinfo" class="footer">
-      <div class="footer-contents">
-
-         <!--
-         ========================
-         Place Footer Content Here
-         ========================
-         -->
-
-        <div class="row">
-            <div class="large-12 columns">
-                <ul>
-                    <li>
-                        <a href="http://nys-its.github.com/go-responsive/">See the framework in action</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-         <!--
-         ========================
-         End Footer Content Here
-         ========================
-         -->
-
-      </div>
-    </footer>
-  </div>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/excelsior/excelsior.min.js"></script>
