Moved styles from styles.css to LESS, deleted file; closes #97

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
      <link rel="stylesheet" href="css/site.min.css">
 
-     <!--rbig1
+     <!--
 
      ========================
      End Custom Styles Here
@@ -55,7 +55,7 @@
           State Agencies
         </a>
       </div>
-      <a href="http://www.nysegov.com/citGuide.cfm?superCat=102&cat=449&content=main" id="gov-link-3" class="gov-link-3">
+      <a href="http://www.nysegov.com/citGuide.cfm?superCat=102&amp;cat=449&amp;content=main" id="gov-link-3" class="gov-link-3">
         Search all of NY.gov
       </a>
       <form action="http://www.search.cio.ny.gov/search" method="get" target="_blank">
