remove this change for now to pull into master

--- a/index.html
+++ b/index.html
@@ -166,15 +166,14 @@
 
             <div class="row">
                 <div class="large-12 columns">
-                    <img src="images/excelsior-long-500.png" alt="Excelsior Web Framework">
+                    <h1>Page Title</h1>
                 </div>
             </div>
 
             <div class="row">
                 <div class="large-12 columns">
-                    
-                    <h1>Getting Started</h1>
-                    <p>The Excelsior Web Meta-Framework (EWF) is built using some of best web technologies currently avaliable. Using these different vendor libraries as a base, allows developers to create cutting edge websites and applications at a much faster pase.</p>
+                    <h2>Getting Started with the Excelsior Web Framework (EWF)</h2>
+                    <p>The Excelsior meta-framework is built using some of best web technologies currently avaliable. Using these different vendor libraries as a base, allows developers to create cutting edge websites and applications at a much faster pase.</p>
 
                     <p>
                         To get started using EWF please see out <a href="https://github.com/nys-its/excelsior-web-framework/wiki">documentation</a>.
