change homepage layout fix links typos

--- a/index.html
+++ b/index.html
@@ -166,17 +166,12 @@
 
             <div class="row">
                 <div class="large-12 columns">
-                    <h1>Page Title</h1>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="large-12 columns">
-                    <h2>Getting Started with the Excelsior Web Framework (EWF)</h2>
-                    <p>The Excelsior meta-framework is built using some of best web technologies currently avaliable. Using these different vendor libraries as a base, allows developers to create cutting edge websites and applications at a much faster pase.</p>
+                    
+                    <h1>Getting Started</h1>
+                    <p>The Excelsior Web Framework (EWF) is a "meta-framework" built upon some of best technologies currently avaliable on the web. Using these different vendor libraries as a base, allows developers to create cutting edge websites and applications at a much faster pace.</p>
 
                     <p>
-                        To get started using EWF please see out <a href="https://github.com/nys-its/excelsior-web-framework/wiki">documentation</a>.
+                        See the <a href="https://github.com/nys-its/excelsior-web-framework/wiki">Empire Web Framework Documentation</a> to get started.
                     </p>
                 </div>
             </div>
@@ -187,7 +182,7 @@
                     <ul class="bulleted-list">
                         <li><a href="http://foundation.zurb.com">Zurb's Foundation</a></li>
                         <li><a href="http://jquery.com">jQuery</a></li>
-                        <li><a href="http://http://modernizr.com/">Modernizr</a></li>
+                        <li><a href="http://modernizr.com/">Modernizr</a></li>
                     </ul>
                 </div>
             </div>
