--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
             <div class="row">
                 <div class="large-12 columns">
-                    
+
                     <h1>Getting Started</h1>
                     <p>The Excelsior Web Framework (EWF) is a "meta-framework" built upon some of best technologies currently avaliable on the web. Using these different vendor libraries as a base, allows developers to create cutting edge websites and applications at a much faster pace.</p>
 
@@ -236,6 +236,7 @@
     <!-- <script src="javascripts/jquery.foundation.orbit.js"></script> -->
     <!-- <script src="javascripts/jquery.foundation.navigation.js"></script> -->
     <!-- <script src="javascripts/jquery.foundation.buttons.js"></script> -->
+    <!-- <script src="javascripts/jquery.foundation.dropdown.js"></script> -->
     <!-- <script src="javascripts/jquery.foundation.tabs.js"></script> -->
     <!-- <script src="javascripts/jquery.foundation.tooltips.js"></script> -->
     <!-- <script src="javascripts/jquery.foundation.accordion.js"></script> -->
