--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
     <!-- <script src="javascripts/jquery.foundation.reveal.js"></script> -->
     <!-- <script src="javascripts/jquery.foundation.orbit.js"></script> -->
     <!-- <script src="javascripts/jquery.foundation.navigation.js"></script> -->
+    <!-- <script src="javascripts/jquery.foundation.dropdown.js"></script> -->
     <!-- <script src="javascripts/jquery.foundation.buttons.js"></script> -->
     <!-- <script src="javascripts/jquery.foundation.tabs.js"></script> -->
     <!-- <script src="javascripts/jquery.foundation.tooltips.js"></script> -->
