fix file locations on index page

--- a/index.html
+++ b/index.html
@@ -228,34 +228,48 @@
     <script src="js/excelsior/off-canvas.min.js"></script>
     <script src="js/foundation/foundation.js"></script>
 
+
     <!-- Uncomment items as needed -->
     <!-- Foundation -->
-    <!-- <script src="javascripts/jquery.foundation.mediaQueryToggle.js"></script> -->
-    <!-- <script src="javascripts/jquery.foundation.forms.js"></script> -->
-    <!-- <script src="javascripts/jquery.foundation.reveal.js"></script> -->
-    <!-- <script src="javascripts/jquery.foundation.orbit.js"></script> -->
-    <!-- <script src="javascripts/jquery.foundation.navigation.js"></script> -->
-    <!-- <script src="javascripts/jquery.foundation.dropdown.js"></script> -->
-    <!-- <script src="javascripts/jquery.foundation.buttons.js"></script> -->
-    <!-- <script src="javascripts/jquery.foundation.tabs.js"></script> -->
-    <!-- <script src="javascripts/jquery.foundation.tooltips.js"></script> -->
-    <!-- <script src="javascripts/jquery.foundation.accordion.js"></script> -->
-    <!-- <script src="javascripts/jquery.placeholder.js"></script> -->
-    <!-- <script src="javascripts/jquery.foundation.alerts.js"></script> -->
-    <!-- <script src="javascripts/jquery.foundation.topbar.js"></script> -->
-    <!-- <script src="javascripts/jquery.foundation.joyride.js"></script> -->
-    <!-- <script src="javascripts/jquery.foundation.clearing.js"></script> -->
-    <!-- <script src="javascripts/jquery.foundation.magellan.js"></script> -->
+    <!-- <script src="js/foundation/foundation.alerts.js"></script> -->
+
+    <!-- <script src="js/foundation/foundation.clearing.js"></script> -->
+
+    <!-- <script src="js/foundation/foundation.cookie.js"></script> -->
+
+    <!-- <script src="js/foundation/foundation.dropdown.js"></script> -->
+
+    <!-- <script src="js/foundation/foundation.forms.js"></script> -->
+
+    <!-- <script src="js/foundation/foundation.joyride.js"></script> -->
+
+    <!-- <script src="js/foundation/foundation.magellan.js"></script> -->
+
+    <!-- <script src="js/foundation/foundation.orbit.js"></script> -->
+
+    <!-- <script src="js/foundation/foundation.placeholder.js"></script> -->
+
+    <!-- <script src="js/foundation/foundation.reveal.js"></script> -->
+
+    <!-- <script src="js/foundation/foundation.section.js"></script> -->
+
+    <!-- <script src="js/foundation/foundation.tooltips.js"></script> -->
+
+    <!-- <script src="js/foundation/foundation.topbar.js"></script> -->
+
 
     <!-- Excelsior -->
     <!-- <script src="js/excelsior/off-canvas.js"></script> -->
 
+
     <!-- jQuery UI -->
     <!-- <script src="js/vendor/jquery-ui.widget.min.js"></script> -->
+
 
     <!-- Charting -->
     <!-- <script src="js/vendor/chart.min.js"></script> -->
     <!-- <script src="js/excelsior/respCharts.js"></script> -->
+
 
     <!-- Responsive Tables -->
     <!-- <script src="js/excelsior/responsive-tables.js"></script> -->
@@ -270,12 +284,6 @@
      -->
 
      <script src="js/site.min.js"></script>
-
-     <!--
-     ========================
-     End Custom Scripts Here
-     ========================
-     -->
 
 </body>
 </html>
