Added Erics index change to include commented dev stylesheet links. Closes #133

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <!-- Please add a site Title -->
     <title>Getting Started</title>
 
+    <!--
+    ===============
+    Use These Stylesheets During Development
+    ===============
+
+    <link rel="stylesheet" href="css/excelsior.css">
+    <link rel="stylesheet" href="css/off-canvas.css">
+
+    -->
+    <!--
+    ===============
+    Use These Stylesheets for Production
+    ===============
+    -->
     <link rel="stylesheet" href="css/excelsior.min.css">
     <link rel="stylesheet" href="css/off-canvas.min.css">
 
