--- a/index.html
+++ b/index.html
@@ -1,165 +1,158 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
-    <!-- Please add a site Title -->
     <title>Getting Started</title>
 
     <!--
     ===============
-    Use These Stylesheets During Development
+    Use These Stylesheets During Development:
     ===============
 
     <link rel="stylesheet" href="css/excelsior.css">
     <link rel="stylesheet" href="css/off-canvas.css">
+    <link rel="stylesheet" href="css/site.css">
 
     -->
+
     <!--
     ===============
-    Use These Stylesheets for Production
+    End Development Stylesheets
     ===============
     -->
+
+    <!--
+    ===============
+    Use These Stylesheets for Production:
+    ===============
+    -->
+
     <link rel="stylesheet" href="css/excelsior.min.css">
     <link rel="stylesheet" href="css/off-canvas.min.css">
 
-    <!-- Fav icon -->
+    <!--
+    ========================
+    Place Custom Styles Here
+    ========================
+    -->
+
+    <link rel="stylesheet" href="css/site.min.css">
+
+    <!--
+    ===============
+    End Production Stylesheets
+    ===============
+    -->
+
+    <!-- Fav icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/apple-touch-icon-144x144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/apple-touch-icon-114x114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-72x72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon-57x57-precomposed.png">
     <link rel="shortcut icon" href="images/apple-touch-icon.png">
     <link rel="icon" href="images/favicon.ico">
-
     <script src="js/vendor/custom.modernizr.js"></script>
-
-
-     <!--
-     ========================
-     Place Custom Styles Here
-     ========================
-     -->
-
-     <link rel="stylesheet" href="css/site.min.css">
-
-     <!--
-
-     ========================
-     End Custom Styles Here
-     ========================
-     -->
-
 </head>
 <body class="off-canvas">
-  <a href="#global-nav" class="skip-to">Skip to Navigation</a>
-  <a href="#page" class="skip-to">Skip to Content</a>
-  <div class="gov-pull-down-container show-for-small">
-  <a href="#" id="gov-pull-down" class="gov-pull-down show-for-small" data-active="active-gov-bar">
-    Open New York State Search
-  </a>
-  </div>
-  <div id="gov-bar" class="gov-bar">
-    <div class="gov-wrap">
-      <div class="state-links">
-        <a href="http://www.ny.gov/" class="gov-link-1">
-          New York State
-        </a>
-        <a href="#" class="gov-link-2">
-          State Agencies
-        </a>
-      </div>
-      <a href="http://www.nysegov.com/citGuide.cfm?superCat=102&amp;cat=449&amp;content=main" id="gov-link-3" class="gov-link-3">
-        Search all of NY.gov
-      </a>
-      <form action="http://www.search.cio.ny.gov/search" method="get" target="_blank">
-        <fieldset>
-          <legend>Legend</legend>
-          <label for="site-search-box">Search</label>
-          <div class="search-container">
-            <label for="state-search" class="hide-off-screen">Search All of NYS</label>
-            <input type="search" name="q" id="state-search" />
-            <input type="submit" value="Search NY"  />
-          </div>
-          <input type="hidden" name="sort" value="date:D:L:d1">
-          <input type="hidden" name="output" value="xml_no_dtd">
-          <input type="hidden" name="ie" value="UTF-8">
-          <input type="hidden" name="oe" value="UTF-8">
-          <input type="hidden" name="client" value="default_frontend">
-          <input type="hidden" name="proxystylesheet" value="default_frontend">
-          <input type="hidden" name="site" value="default_collection">
-
-        </fieldset>
-      </form>
+    <a href="#global-nav" class="skip-to">Skip to Navigation</a>
+    <a href="#page" class="skip-to">Skip to Content</a>
+    <div class="gov-pull-down-container show-for-small">
+        <a href="#" id="gov-pull-down" class="gov-pull-down show-for-small" data-active="active-gov-bar">Open New York State Search</a>
     </div>
-  </div>
-  <div id="site-bar" class="site-bar">
-    <div class="site-wrap">
-      <a href="index.html" class="site-logo">
-         <!--
-         ========================
-         Place Site Title Here
-         ========================
-         -->
-        Excelsior Web Framework
-         <!--
-         ========================
-         End Site Title Here
-         ========================
-         -->
-      </a>
-      <div class="site-functions">
-        <ul class="mobile-functions">
-          <li><a href="#" id="mobile-site-search" class="mobile-icons mobile-search-button" data-active="active-site-search">Search Toggle</a></li>
-          <li><a href="#" id="mobile-site-menu" class="mobile-icons mobile-menu-button" data-active="active-site-menu">Menu Toggle</a></li>
-        </ul>
-        <!-- Link to show the menu -->
-        <div class="site-search">
-          <form action="/">
-            <fieldset>
-              <legend>Legend</legend>
-              <label for="site-search-box">Search</label>
-              <div class="search-container">
-                <input type="search" id="site-search-box" class="site-search-box" />
-                <div class="site-button">
-                  <input type="submit" class="site-search-button" value="Search Agency"  />
-                </div>
-              </div>
-            </fieldset>
-          </form>
+    <div id="gov-bar" class="gov-bar">
+        <div class="gov-wrap">
+            <div class="state-links">
+                <a href="http://www.ny.gov/" class="gov-link-1">New York State</a>
+                <a href="#" class="gov-link-2">State Agencies</a>
+            </div>
+            <a href="http://www.nysegov.com/citGuide.cfm?superCat=102&amp;cat=449&amp;content=main" id="gov-link-3" class="gov-link-3">Search all of NY.gov</a>
+            <form action="http://www.search.cio.ny.gov/search" method="get" target="_blank">
+                <fieldset>
+                    <legend>Legend</legend>
+                    <label for="site-search-box">Search</label>
+                    <div class="search-container">
+                        <label for="state-search" class="hide-off-screen">Search All of NYS</label>
+                        <input type="search" name="q" id="state-search">
+                        <input type="submit" value="Search NY">
+                    </div>
+                    <input type="hidden" name="sort" value="date:D:L:d1">
+                    <input type="hidden" name="output" value="xml_no_dtd">
+                    <input type="hidden" name="ie" value="UTF-8">
+                    <input type="hidden" name="oe" value="UTF-8">
+                    <input type="hidden" name="client" value="default_frontend">
+                    <input type="hidden" name="proxystylesheet" value="default_frontend">
+                    <input type="hidden" name="site" value="default_collection">
+                </fieldset>
+            </form>
         </div>
-      </div>
     </div>
-  </div>
-  <nav id="global-nav" class="global-nav">
+    <div id="site-bar" class="site-bar">
+        <div class="site-wrap">
+            <a href="index.html" class="site-logo">
+            <!--
+            ========================
+            Place Site Title Here
+            ========================
+            -->
+            Excelsior Web Framework
+            <!--
+            ========================
+            End Site Title Here
+            ========================
+            -->
+            </a>
+            <div class="site-functions">
+                <ul class="mobile-functions">
+                    <li><a href="#" id="mobile-site-search" class="mobile-icons mobile-search-button" data-active="active-site-search">Search Toggle</a></li>
+                    <li><a href="#" id="mobile-site-menu" class="mobile-icons mobile-menu-button" data-active="active-site-menu">Menu Toggle</a></li>
+                </ul>
+                <!-- Link to show the menu -->
+                <div class="site-search">
+                    <form action="#">
+                        <fieldset>
+                            <legend>Legend</legend>
+                            <label for="site-search-box">Search</label>
+                            <div class="search-container">
+                                <input type="search" id="site-search-box" class="site-search-box">
+                                <div class="site-button">
+                                    <input type="submit" class="site-search-button" value="Search Agency">
+                                </div>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <nav id="global-nav" class="global-nav">
         <div class="nav-container">
             <!--
-             ========================
-             Place Global Navigation Here
-             ========================
+            ========================
+            Place Global Navigation Here
+            ========================
             -->
             <ul>
-                <li>
-                    <a href="#">Nav Link 1</a>
+                <li><a href="#">Nav Link 1</a>
                     <ul>
-                      <li><a href="#">Sub Nav Link 1.1</a></li>
-                      <li><a href="#">Sub Nav Link 1.2</a></li>
-                      <li><a href="#">Sub Nav Link 1.3</a></li>
+                        <li><a href="#">Sub Nav Link 1.1</a></li>
+                        <li><a href="#">Sub Nav Link 1.2</a></li>
+                        <li><a href="#">Sub Nav Link 1.3</a></li>
                     </ul>
                 </li>
-                <li>
-                    <a href="#">Nav Link 2</a>
+                <li><a href="#">Nav Link 2</a>
                     <ul>
-                      <li><a href="#">Sub Nav Link 2.1</a></li>
-                      <li><a href="#">Sub Nav Link 2.2</a></li>
-                      <li><a href="#">Sub Nav Link 2.3</a></li>
+                        <li><a href="#">Sub Nav Link 2.1</a></li>
+                        <li><a href="#">Sub Nav Link 2.2</a></li>
+                        <li><a href="#">Sub Nav Link 2.3</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Nav Link 3</a></li>
             </ul>
             <!--
              ========================
-             End Global Navigation  Here
+             End Global Navigation
              ========================
             -->
         </div>
@@ -168,10 +161,9 @@
         <div class="content-section">
             <noscript>
                 <div class="alert-box">
-                    <strong>JavaScript is currently disabled in your web browser. </strong><br /> For full functionality of this site, it is necessary to enable JavaScript. Here are <a href="http://www.enable-javascript.com/" target="_blank"> instructions how to enable JavaScript</a>
+                    <p><strong>JavaScript is currently disabled in your web browser. </strong><br /> For full functionality of this site, it is necessary to enable JavaScript. Here are <a href="http://www.enable-javascript.com/" target="_blank"> instructions how to enable JavaScript</a></p>
                 </div>
             </noscript>
-
             <!--
             ========================
             Place Page Content Here
@@ -179,13 +171,9 @@
             -->
             <div class="row">
                 <div class="large-12 columns">
-
                     <h1>Getting Started</h1>
                     <p>The Excelsior Web Framework (EWF) is a "meta-framework" built upon some of best technologies currently avaliable on the web. Using these different vendor libraries as a base, allows developers to create cutting edge websites and applications at a much faster pace.</p>
-
-                    <p>
-                        See the <a href="https://github.com/nys-its/excelsior-web-framework/wiki">Excelsior Web Framework Documentation</a> to get started.
-                    </p>
+                    <p>See the <a href="https://github.com/nys-its/excelsior/wiki">Excelsior Web Framework Documentation</a> to get started.</p>
                 </div>
             </div>
 
@@ -199,40 +187,32 @@
                     </ul>
                 </div>
             </div>
-
-             <!--
-             ========================
-             End Page Content Here
-             ========================
-             -->
-
+            <!--
+            ========================
+            End Page Content
+            ========================
+            -->
         </div>
         <footer role="contentinfo" class="footer">
-          <div class="footer-contents">
-
-             <!--
-             ========================
-             Place Footer Content Here
-             ========================
-             -->
-
-            <div class="row">
-                <div class="large-12 columns">
-                    <ul>
-                        <li>
-                            <a href="http://nys-its.github.com/go-responsive/">See the framework in action</a>
-                        </li>
-                    </ul>
+            <div class="footer-contents">
+                <!--
+                ========================
+                Place Footer Content Here
+                ========================
+                -->
+                <div class="row">
+                    <div class="large-12 columns">
+                        <ul>
+                            <li><a href="http://nys-its.github.com/go-responsive/">See the framework in action</a></li>
+                        </ul>
+                    </div>
                 </div>
+                <!--
+                ========================
+                End Footer Content
+                ========================
+                -->
             </div>
-
-             <!--
-             ========================
-             End Footer Content Here
-             ========================
-             -->
-
-          </div>
         </footer>
     </div>
 
@@ -281,6 +261,7 @@
 
     <!-- Charting -->
     <!-- <script src="js/vendor/chart.min.js"></script> -->
+
     <!-- <script src="js/excelsior/respCharts.js"></script> -->
 
 
@@ -289,14 +270,12 @@
 
     <script>$(document).foundation();</script>
 
-
-     <!--
-     ========================
-     Place Custom Scripts Here
-     ========================
-     -->
-
-     <script src="js/site.min.js"></script>
+    <!--
+    ========================
+    Place Custom Scripts Here
+    ========================
+    -->
+    <script src="js/site.min.js"></script>
 
 </body>
 </html>
