Prototype of gov-bar pulldown with lines

--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
     ===============
     Use These Stylesheets During Development:
     ===============
+    -->
 
     <link rel="stylesheet" href="excelsior/css/excelsior.css">
     <link rel="stylesheet" href="excelsior/css/off-canvas.css">
-    <link rel="stylesheet" href="app/css/site.css">
-
-    -->
 
     <!--
     ===============
@@ -27,11 +25,11 @@
     ===============
     Use These Stylesheets for Production:
     ===============
-    -->
+
 
     <link rel="stylesheet" href="excelsior/css/excelsior.min.css">
     <link rel="stylesheet" href="excelsior/css/off-canvas.min.css">
-
+    -->
     <!--
     ========================
     Place Custom Styles Here
@@ -59,7 +57,11 @@
     <a href="#global-nav" class="skip-to">Skip to Navigation</a>
     <a href="#page" class="skip-to">Skip to Content</a>
     <div class="gov-pull-down-container show-for-small">
-        <a href="#" id="gov-pull-down" class="gov-pull-down show-for-small" data-active="active-gov-bar">Open New York State Search</a>
+        <a href="#" id="gov-pull-down" class="gov-pull-down show-for-small" data-active="active-gov-bar">
+            <span class="accessibility-text">Open New York State Search</span>
+            <span class="pull-bar top-line"></span>
+            <span class="pull-bar bottom-line"></span>
+        </a>
     </div>
     <div id="gov-bar" class="gov-bar">
         <div class="gov-wrap">
