Rewrote the HTML to use better strucute, converted line colors and css markup to SASS

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
     <div class="gov-pull-down-container show-for-small">
         <a href="#" id="gov-pull-down" class="gov-pull-down show-for-small" data-active="active-gov-bar">
             <span class="accessibility-text">Open New York State Search</span>
-            <span class="pull-bar top-line"></span>
-            <span class="pull-bar bottom-line"></span>
+            <span class="tab-puller">
+                <span></span>
+            </span>
         </a>
     </div>
     <div id="gov-bar" class="gov-bar">
