converted pull tab lines to use a mixin

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="gov-pull-down-container show-for-small">
         <a href="#" id="gov-pull-down" class="gov-pull-down show-for-small" data-active="active-gov-bar">
             <span class="accessibility-text">Open New York State Search</span>
-            <span class="tab-puller">
+            <span class="gripper">
                 <span></span>
             </span>
         </a>
