--- a/index.html
+++ b/index.html
@@ -3,46 +3,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-
     <title>Getting Started</title>
 
-    <!--
-    ===============
-    Use These Stylesheets During Development:
-    ===============
-    -->
-
+    <!-- Development Stylesheets (remove for production) -->
     <link rel="stylesheet" href="excelsior/css/excelsior.css">
     <link rel="stylesheet" href="excelsior/css/off-canvas.css">
 
-    <!--
-    ===============
-    End Development Stylesheets
-    ===============
-    -->
-
-    <!--
-    ===============
-    Use These Stylesheets for Production:
-    ===============
+    <!-- Production Stylesheets (uncomment for production) -->
+    <!-- <link rel="stylesheet" href="excelsior/css/excelsior.min.css"> -->
+    <!-- <link rel="stylesheet" href="excelsior/css/off-canvas.min.css"> -->
 
 
-    <link rel="stylesheet" href="excelsior/css/excelsior.min.css">
-    <link rel="stylesheet" href="excelsior/css/off-canvas.min.css">
-    -->
-    <!--
-    ========================
-    Place Custom Styles Here
-    ========================
-    -->
-
-    <link rel="stylesheet" href="app/css/site.min.css">
-
-    <!--
-    ===============
-    End Production Stylesheets
-    ===============
-    -->
+    <!-- Optional Project Stylesheet (create in project-assets/css folder) -->
+    <!-- <link rel="stylesheet" href="project-assets/css/project.css"> -->
 
     <!-- Fav icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="excelsior/images/apple-touch-icon-144x144-precomposed.png">
@@ -224,7 +197,6 @@
     <script src="excelsior/js/core/off-canvas.min.js"></script>
     <script src="excelsior/js/foundation/foundation.js"></script>
 
-
     <!-- Uncomment items as needed -->
     <!-- Foundation -->
     <!-- <script src="excelsior/js/foundation/foundation.alerts.js"></script> -->
@@ -273,8 +245,9 @@
     ========================
     Place Custom Scripts Here
     ========================
+
+    EX: <script src="project-assets/js/project.js"></script>
     -->
-    <script src="app/js/site.min.js"></script>
 
 </body>
 </html>
