--- a/index.html
+++ b/index.html
@@ -93,19 +93,21 @@
     </div>
     <div id="site-bar" class="site-bar">
         <div class="site-wrap">
-            <a href="index.html" class="site-logo">
-            <!--
-            ========================
-            Place Site Title Here
-            ========================
-            -->
-            Excelsior Web Framework
-            <!--
-            ========================
-            End Site Title Here
-            ========================
-            -->
-            </a>
+            <div class="site-title">
+                <a href="index.html" class="site-logo">
+                <!--
+                ========================
+                Place Site Title Here
+                ========================
+                -->
+                Excelsior Web Framework
+                <!--
+                ========================
+                End Site Title Here
+                ========================
+                -->
+                </a>
+            </div>
             <div class="site-functions">
                 <ul class="mobile-functions">
                     <li><a href="#" id="mobile-site-search" class="mobile-icons mobile-search-button" data-active="active-site-search">Search Toggle</a></li>
