Added two-liner class

--- a/index.html
+++ b/index.html
@@ -94,13 +94,14 @@
     <div id="site-bar" class="site-bar">
         <div class="site-wrap">
             <div class="site-title">
-                <a href="index.html" class="site-logo">
+                <a href="index.html" class="site-logo two-line-title">
                 <!--
                 ========================
                 Place Site Title Here
                 ========================
                 -->
-                Excelsior Web Framework
+                <span>Excelsior</span>
+                <span>Web Framework</span>
                 <!--
                 ========================
                 End Site Title Here
