remove regular css from zip file and index.html

--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <title>Getting Started</title>
 
-    <!-- Development Stylesheets (remove for production) -->
-    <link rel="stylesheet" href="excelsior/css/excelsior.css">
-    <link rel="stylesheet" href="excelsior/css/off-canvas.css">
-
-    <!-- Production Stylesheets (uncomment for production) -->
-    <!-- <link rel="stylesheet" href="excelsior/css/excelsior.min.css"> -->
-    <!-- <link rel="stylesheet" href="excelsior/css/off-canvas.min.css"> -->
-
+    <!-- Excelsior Stylesheets -->
+    <link rel="stylesheet" href="excelsior/css/excelsior.min.css">
+    <link rel="stylesheet" href="excelsior/css/off-canvas.min.css">
 
     <!-- Optional Project Stylesheet (create in project-assets/css folder) -->
     <!-- <link rel="stylesheet" href="project-assets/css/project.css"> -->
